--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "customer-db",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://arko8919.github.io/customers-database.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
